--- a/api-guides/RESERVAS/routes_private_reservas_HistorialReservas.yaml
+++ b/api-guides/RESERVAS/routes_private_reservas_HistorialReservas.yaml
@@ -220,6 +220,8 @@ paths:
                       status: CANCELLED
                 error: ""
                 traceback: ""
+                meta:
+                  total_records: 100
     
   /api/client/reservations/history/search:
     post:
@@ -254,6 +256,8 @@ paths:
                       status: CANCELLED
                 error: ""
                 traceback: ""
+                meta:
+                  total_records: 100
    
   /api/client/reservations/{id}:
     get:
