Actualizar archivo .env.example para corregir el nombre de la base de datos y eliminar archivo de configuración de entorno obsoleto

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ FRONTEND_PORT=4202
 # Database Configuration
 DB_USER=postgres
 DB_HOST=localhost
-DB_DATABASE=mlap_t
+DB_NAME=mlap_t
 DB_PASSWORD=postgres
 DB_PORT=5432
 
